@@ -50,7 +50,7 @@ initialize before attempting to use the module.
 Most of the work done with fonts are done by using the actual
 Font objects. The module by itself only has routines to
 initialize the module and create Font objects with
-pygame.font.font().
+pygame.font.Font().
 
 <hr>
 
