@@ -72,10 +72,6 @@ control timer events</td></tr>
 pygame.time.delay(millseconds) -> none
 </tt></font><ul>
 Will pause for a given number of milliseconds.
-The maximum resolution of this delay is 10 milliseconds. The
-time you request to delay will be truncated down to the nearest
-10 milliseconds. This will help <u>delay()</u> return a little before
-the requested time has passed, instead of a little afterwards.
 </ul><br>&nbsp;<br>
 
 <a name=get_ticks><font size=+2><b>get_ticks
